namespace intro_oop;

public record Location
{
    public double X { get; init; }
    public double Y { get; init; }
}
