namespace intro_oop;

public abstract class Shape
{
    public abstract double Area();
    public Location? Location { get; set; }
}